# machine-a-lire

./: LICENSE  README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/digital4better/malo/: MainActivity.kt
android/app/src/main/kotlin/com/example/machine_a_lire/: MainActivity.kt
assets/: tessdata_config.json
ios/: Podfile
ios/Classes/: opencv.cpp
ios/Runner/: Info.plist  LaunchScreen.storyboard
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: main.dart  opencv.dart
lib/components/: archiveItem.dart  backButton.dart  button.dart  outlinedButton.dart  tutorialSection.dart
lib/services/: speech.dart
lib/widgets/: Help.dart  analyse.dart  archive.dart  donation.dart  help.dart  history.dart  home.dart  narrator.dart  saveScan.dart  vision.dart
native_opencv/: pubspec.yaml
native_opencv/android/: .gitignore  CMakeLists.txt  build.gradle
native_opencv/android/src/main/: AndroidManifest.xml
native_opencv/android/src/main/kotlin/com/digital4better/malo/native_opencv/: NativeOpencvPlugin.kt
native_opencv/ios/: native_opencv.podspec
native_opencv/ios/Classes/: native_opencv.cpp
native_opencv/lib/: native_opencv.dart
test/: widget_test.dart
web/: index.html  manifest.json
